no guess in first round for other team, hint/guess only editable when input is needed

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,9 @@ body {
     cursor: pointer;
 }
 
-.button-submit:disabled {
+button:disabled,
+input:disabled,
+select:disabled {
     cursor: not-allowed;
 }
 
